--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"vue-i18n": "^9.2.2",
 		"vue-loader": "^17.0.0",
 		"vue-router": "^4.1.5",
+		"vue-three-shortkey": "^4.0.1",
 		"vuex": "^4.0.2",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
@@ -65,7 +66,7 @@
 		"@storybook/manager-webpack5": "^6.5.12",
 		"@storybook/vue3": "^6.5.12",
 		"@types/jest": "^29.0.2",
-		"@types/node": "^18.7.18",
+		"@types/node": "^18.8.0",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
 		"@vue/test-utils": "^2.0.2",
