moved from the bloated webpack scaffolding to vite

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,11 +1,8 @@
 # Dist folder
 dist/*
 
-# Coverage report
-coverage/*
-
 # Node modules
 node_modules/*
 
-# NOT Storybook!
-!/.storybook
+.eslintrc.json
+env.d.ts
