--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-	"compilerOptions": {
+  "compilerOptions": {
 		"strict": true,
-
 		"target": "ESNext",
 		"module": "ESNext",
 		"allowJs": true,
@@ -16,16 +15,26 @@
 		"baseUrl": "./",
 		"paths": {
 			"src/*": ["src/*"],
-			"test/*": ["test/*"]
+			"@/*": ["src/*"],
 		},
-		"types": ["jest", "node"]
+		"types": ["node"]
 	},
 	"include": [
 		"src/**/*.js",
 		"src/**/*.ts",
 		"src/**/*.vue",
-		"test/**/*.js",
-		"test/**/*.ts"
 	],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist"],
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.config.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
+    }
+  ]
 }
