--- a/package.json
+++ b/package.json
@@ -1,86 +1,43 @@
 {
-	"name": "fretter",
-	"description": "A vue application that helps guitar players with their intervals",
-	"author": "Tibor Krizsak",
-	"version": "0.0.1",
-	"private": true,
-	"license": "UNLICENSED",
-	"config": {
-		"default_api_path": "/",
-		"default_public_path": "/"
-	},
-	"scripts": {
-		"test": "npm run typecheck && npm run lint && npm run unit -- --coverage --verbose",
-		"start": "cross-env NODE_ENV=development webpack serve --allowed-hosts all --config build/webpack.config.js",
-		"start:localhost": "cross-env DEV_HOST=http://localhost:3000 npm start",
-		"build": "cross-env NODE_ENV=production npm run bundle",
-		"pages": "build-storybook -c .storybook -o public",
-		"lint": "eslint --max-warnings 0 --ext .js,.ts,.vue src test build .storybook \"*.config.js\"",
-		"unit": "cross-env NODE_ENV=test jest",
-		"typecheck": "vue-tsc",
-		"analyze": "cross-env ANALYZE=true npm run build",
-		"audit": "npm audit --omit=dev",
-		"bundle": "webpack --progress --config build/webpack.config.js",
-		"storybook": "start-storybook -p 3333"
-	},
-	"dependencies": {
-		"@babel/core": "^7.19.1",
-		"@babel/preset-env": "^7.19.1",
-		"@fortawesome/fontawesome-svg-core": "^6.2.0",
-		"@fortawesome/vue-fontawesome": "^3.0.1",
-		"@intlify/vue-i18n-loader": "^4.2.0",
-		"@lion/dialog": "^0.16.1",
-		"@vue/compiler-sfc": "^3.2.27",
-		"axios": "^0.27.2",
-		"babel-loader": "^8.2.5",
-		"babel-preset-vue": "^2.0.2",
-		"bulma": "^0.9.4",
-		"core-js": "^3.25.1",
-		"css-loader": "^6.7.1",
-		"html-webpack-plugin": "^5.5.0",
-		"mini-css-extract-plugin": "^2.6.1",
-		"pinia": "^2.0.23",
-		"postcss": "^8.4.16",
-		"postcss-loader": "^7.0.1",
-		"postcss-preset-env": "^7.8.1",
-		"resolve-url-loader": "^5.0.0",
-		"sass": "^1.54.9",
-		"sass-loader": "^13.0.2",
-		"ts-loader": "^9.3.1",
-		"typescript": "^4.8.3",
-		"vue": "^3.2.27",
-		"vue-i18n": "^9.2.2",
-		"vue-loader": "^17.0.0",
-		"vue-router": "^4.1.5",
-		"vue-three-shortkey": "^4.0.1",
-		"vuex": "^4.0.2",
-		"webpack": "^5.74.0",
-		"webpack-cli": "^4.10.0"
-	},
-	"devDependencies": {
-		"@babel/eslint-parser": "^7.19.1",
-		"@storybook/addon-a11y": "^6.5.12",
-		"@storybook/addon-essentials": "^6.5.12",
-		"@storybook/addons": "^6.4.19",
-		"@storybook/builder-webpack5": "^6.5.12",
-		"@storybook/manager-webpack5": "^6.5.12",
-		"@storybook/vue3": "^6.5.12",
-		"@types/jest": "^29.0.2",
-		"@types/node": "^18.8.0",
-		"@typescript-eslint/eslint-plugin": "^5.37.0",
-		"@typescript-eslint/parser": "^5.37.0",
-		"@vue/test-utils": "^2.0.2",
-		"@vue/vue3-jest": "^29.0.0",
-		"babel-jest": "^29.0.3",
-		"cross-env": "^7.0.3",
-		"eslint": "^8.23.1",
-		"eslint-plugin-storybook": "^0.6.4",
-		"eslint-plugin-vue": "^9.4.0",
-		"jest": "^29.0.3",
-		"jest-environment-jsdom": "^29.0.3",
-		"ts-jest": "^29.0.1",
-		"vue-tsc": "^0.40.13",
-		"webpack-bundle-analyzer": "^4.6.1",
-		"webpack-dev-server": "^4.11.0"
-	}
+  "name": "fretter",
+  "version": "0.0.2",
+  "description": "A vue application that helps guitar players with their intervals",
+  "author": "Tibor Krizsak",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue src",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "bulma": "^0.9.4",
+    "eslint": "^8.34.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "pinia": "^2.0.32",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vue-three-shortkey": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.0",
+    "@types/node": "^18.14.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint-plugin-vue": "^9.9.0",
+    "jsdom": "^21.1.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.58.3",
+    "typescript": "~4.7.4",
+    "vite": "^4.1.3",
+    "vitest": "^0.28.5",
+    "vue-tsc": "^1.1.5"
+  }
 }
