--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Tibor Krizsak",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
